--- a/DPA-Files/package.json
+++ b/DPA-Files/package.json
@@ -9,6 +9,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
+    "google-map-react": "^1.1.7",
+    "google-maps-react": "^2.0.6",
+    "mapbox-gl": "^1.10.0",
     "mdbreact": "^4.26.0",
     "radium": "^0.26.0",
     "react": "^16.13.1",
