--- a/DPA-Files/package.json
+++ b/DPA-Files/package.json
@@ -16,6 +16,8 @@
     "radium": "^0.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-map-gl": "^5.2.5",
+    "react-mapbox-gl": "^4.8.3",
     "react-scripts": "1.1.5"
   },
   "scripts": {
